layout correction
fixed layout issues, caused by bad html code and CSS code

--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,7 @@
-<<<<<<< HEAD
-html {
-  height: 100%;
-}
-
-body {
-  padding-top: 40px;
-  height: 100%;
-  border: solid green 2px;
-  /*width: 100%;*/
-||||||| 4bdfe7f... setup menu links and page changes
-body { padding-top: 40px; }
-
-#map {
-  padding: 1em;
-  margin: 0;
-=======
-#map {
-  padding: 1em;
-  margin: 0;
->>>>>>> parent of 4bdfe7f... setup menu links and page changes
-}
-<<<<<<< HEAD
-
-
 #map1Div {
-  /*width: 100%;*/
-  height: 100%;
-  border: solid red 2px;
-}
-
-div .container{
-  border: dashed black 1px;
-}
-
-div .row {
-  border: solid blue 2px;
+  height: 100vh;
 }
 
 #sideList {
-  border: solid green 2px;
-
+  height: 100%;
 }
-||||||| 4bdfe7f... setup menu links and page changes
-
-
-#map1Div {
-  width: 600px;
-  height: 575px;
-  border: solid red 2px;
-}
-
-div .container{
-  border: dashed black 1px;
-}
-
-div .row {
-  border: solid blue 2px;
-}
-
-#sideList {
-  border: solid green 2px;
-
-}
-=======
->>>>>>> parent of 4bdfe7f... setup menu links and page changes
